fix: fix style on mobile

--- a/packages/client/pages/knowledge/[pId]/[id]/index.module.scss
+++ b/packages/client/pages/knowledge/[pId]/[id]/index.module.scss
@@ -130,7 +130,7 @@
     padding: .8rem;
     
     > main {
-      max-height: 40vh;
+      max-height: 200px;
       overflow: auto;
       scroll-behavior: smooth;
       overscroll-behavior: contain;
